--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,12 @@ h3 {
   border-color: #c4c4c4 !important;
 }
 
+.search {
+  border-radius: 7px;
+  font-size: 16px;
+  padding: 0px 12px;
+}
+
 .input-style:hover {
   outline: none !important;
   border-color: #676767 !important;
